--- a/css/style.css
+++ b/css/style.css
@@ -42,17 +42,62 @@ margin-bottom: 1.5em;}
 blockquote {
   font-size: 1.141em;
   hanging-punctuation: first;
-  rext-indent -0.44em
+  rext-indent -0.44em;
 }
 
 blockquote cite{
 font-size: 1em;
-color: #333
+color: #333;
 }
 
 /*-----------------footer-------------*/
 footer{
   text-align: center;
   font-size: 0.707em;
-  padding: 2em 0 4em 0
+  padding: 2em 0 4em 0;
+}
+
+
+/*-------Nav--------*/
+a{
+  color: #fafafa;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #79E6FF;
+  border-bottom: 1px dotted;
+}
+
+
+
+nav{
+  position: fixed;
+  top: 0;
+  left: 0;
+  margin: 0;
+  width: 100%;
+  background-color: #815BFF;
+  padding: 0.5em 0;
+}
+
+nav ul{
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+
+}
+nav ul li{
+  display: inline;
+  margin: 20px;
+
+}
+
+nav a:link{
+  color: #fafafa;
+}
+
+nav a:hover{
+  color: #79E6FF;
+
 }
