--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,46 @@ font-size: 1em;
 color: #333;
 }
 
+/*---------table--------*/
+
+table{
+  margin: auto;
+  display: table;
+  border-collapse: collapse;
+  border-spacing: 2px;
+  margin-bottom: 2em;
+  width: 100%;
+
+}
+
+caption{
+  margin-bottom: 1.5em;
+  text-transform: uppercase;
+}
+
+th{
+  color: #fafafa;
+  text-transform:uppercase;
+  font-weight: normal;
+  text-align: left;
+  background: #815BFF;
+}
+
+th, td{
+  padding: 0.5em;
+}
+
+table, td {
+  background:
+  border:
+
+
+
+
+
+
+
+
 /*-----------------footer-------------*/
 footer{
   text-align: center;
